# agent-archive

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent_archive/: cli.py  digest.py  distill.py  llm.py  mcp_server.py  mcp_tools.py  mirror.py  models.py  plan.py  prune.py  redact.py  render.py  render_distill.py  store.py  sync.py  topics.py
agent_archive/collectors/: __init__.py  _util.py  claude.py  codex.py  hermes.py  workbuddy.py
docs/superpowers/plans/: 2026-06-14-agent-conversation-sediment-p1.md  2026-06-15-llm-distill-layer.md
docs/superpowers/specs/: 2026-06-14-agent-conversation-sediment-design.md  2026-06-15-llm-distill-layer-design.md
scripts/: auto-distill.sh  com.agentarchive.digest-daily.plist  com.agentarchive.digest-monthly.plist  com.agentarchive.digest-weekly.plist  com.agentarchive.distill-daily.plist  com.agentarchive.sync.plist  mcp-config.example.json  push-digest.sh
tests/: test_claude_collector.py  test_cli.py  test_cli_distill.py  test_codex_collector.py  test_collector_hermes.py  test_collector_workbuddy.py  test_collectors_registry.py  test_digest.py  test_distill.py  test_llm_client.py  test_llm_parse.py  test_mcp_tools.py  test_mirror.py  test_models.py  test_plan.py  test_prune.py  test_redact.py  test_render.py  test_render_distill.py  test_store.py  test_store_distill.py  test_sync.py  test_topics.py
tests/fixtures/: claude_sample.jsonl  codex_approval_session.jsonl  codex_sample.jsonl  codex_session_index.jsonl  workbuddy_sample.jsonl
