[project]
name = "agent-archive"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]

[project.scripts]
agent-archive = "agent_archive.cli:main"
agent-archive-mcp = "agent_archive.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
