[project]
name = "agent-archive"
version = "0.1.0"
description = "把本地 AI Agent 对话（Claude Code / Codex / Hermes）沉淀成原始镜像 + Markdown + SQLite 全文检索的本地知识库"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "moon7787" }]
keywords = ["claude", "codex", "agent", "archive", "knowledge-base", "sqlite", "fts5", "mcp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/moon7787/agent-archive"
Repository = "https://github.com/moon7787/agent-archive"
Issues = "https://github.com/moon7787/agent-archive/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]

[project.scripts]
agent-archive = "agent_archive.cli:main"
agent-archive-mcp = "agent_archive.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
